<resources>
    <string name="app_name">AR.Glass</string>
    <string name="app_version">1.0</string>
    <string name="glass_voice_trigger">Let\'s fly</string>
    <string name="media_sort_photos_and_videos">Photo &amp; Video</string>
    <string name="media_sort_photos">Photo</string>
    <string name="media_sort_videos">Video</string>
    <string name="your_changes_will_be_applied_after_rebooting_drone">Your changes will be applied after rebooting the Ar.Drone!</string>
    <string name="quit_app_reboot_drone_connect_to_network">\t- Quit application\n\t- Reboot your AR.Drone\n\t- Connect your {device} on {network} network\n\t- Launch application</string>
    <string name="START_NOT_RECEIVED">START NOT RECEIVED</string>
    <string name="CONTROL_LINK_NOT_AVAILABLE">CONTROL LINK NOT AVAILABLE</string>
    <string name="ULTRASOUND_EMERGENCY">ULTRASOUND EMERGENCY</string>
    <string name="CUT_OUT_EMERGENCY">CUT OUT EMERGENCY</string>
    <string name="MOTORS_EMERGENCY">MOTORS EMERGENCY</string>
    <string name="PIC_VERSION_EMERGENCY">PIC VERSION EMERGENCY</string>
    <string name="CAMERA_EMERGENCY">CAMERA EMERGENCY</string>
    <string name="PIC_WATCHDOG_EMERGENCY">PIC WATCHDOG EMERGENCY</string>
    <string name="TOO_MUCH_ANGLE_EMERGENCY">TOO MUCH ANGLE EMERGENCY</string>
    <string name="USER_EMERGENCY">USER EMERGENCY</string>
    <string name="BATTERY_LOW_EMERGENCY">BATTERY LOW EMERGENCY</string>
    <string name="UNKNOWN_EMERGENCY">UNKNOWN EMERGENCY</string>
    <string name="ULTRASOUND_ALERT">ULTRASOUND ALERT</string>
    <string name="BATTERY_LOW_ALERT">BATTERY LOW ALERT</string>
    <string name="VISION_ALERT">VISION ALERT</string>
    <string name="VIDEO_CONNECTION_ALERT">VIDEO CONNECTION ALERT</string>
    <string name="skip">skip</string>
    <string name="checking_repairing">CHECKING / REPAIRING…</string>
    <string name="sending_file">SENDING FILE</string>
    <string name="installing">INSTALLING</string>
    <string name="restarting_ardrone">RESTARTING AR.DRONE</string>
    <string name="ardrone_firmware">AR.Drone firmware </string>
    <string name="update_file_sent_successfully_please_restart_drone">Update file sent successfully\nPlease restart the AR.Drone</string>
    <string name="if_ardrone_led_green_reset_wifi_connection">If AR.Drone led is green, reset the Wi-Fi connection.</string>
    <string name="EMERGENCY">EMERGENCY</string>
    <string name="FLIP_only_ardrone_2">FLIP (only AR.Drone 2.0)</string>
    <string name="SHARE">SHARE</string>
    <string name="RECORD">RECORD</string>
    <string name="SWITCH">SWITCH</string>
    <string name="switch_camera">SWITCH CAMERA</string>
    <string name="ALTITUDE">ALTITUDE</string>
    <string name="LAND">LAND</string>
    <string name="LANDING">LANDING</string>
    <string name="GEOLOCATION">GEOLOCATION</string>
    <string name="HOVERING">HOVERING</string>
    <string name="ABSOLUTE_CONTROL_only_ardrone_2">ABSOLUTE CONTROL (only AR.Drone 2)</string>
    <string name="ACTIVATE_LOCATION_SERVICES_TO_GEOLOCATE_THE_FLIGHTS">ACTIVATE LOCATION SERVICES ON THE IPHONE/IPAD\nFOR USE IN THE AR.DRONE ACADEMY!</string>
    <string name="IN_CASE_OF_EMERGENCY_PRESS_THE_BUTTON">IN CASE OF EMERGENCY PRESS THE BUTTON TO SHUT DOWN THE ENGINES</string>
    <string name="OFF_TILT_YOUR_DEVICE_TO_CONTROL_THE_ARDRONE">OFF: TILT YOUR DEVICE TO\nCONTROL THE AR.DRONE</string>
    <string name="ON_MOVE_YOUR_LEFT_THUMB_ON_THE_SCREEN_TO_CONTROL_THE_ARDRONE">ON: MOVE YOUR LEFT THUMB ON THE\nSCREEN TO CONTROL THE AR.DRONE</string>
    <string name="SHARE_YOUR_VIDEOS_AND_PHOTOS_DIRECTLY">SHARE YOUR VIDEOS AND PHOTOS DIRECTLY FROM AR.FREEFLIGHT 2.0!</string>
    <string name="PRESS_THE_REC_BUTTON_TO_START_AND_STOP_RECORDING">PRESS THE REC BUTTON TO START AND STOP RECORDING VIDEO</string>
    <string name="PRESS_THIS_BUTTON_TO_SWITCH_BETWEEN_FRONTAL_CAMERA">PRESS THIS BUTTON TO SWITCH BETWEEN\nFRONTAL CAMERA AND VERTICAL CAMERA</string>
    <string name="ACTIVATE_THE_FLIP_IN_THE_PARAMETERS">ACTIVATE THE FLIP SETTING AND DOUBLE TAP\nON THE SCREEN TO FLIP AS YOU FLY!</string>
    <string name="preferences">PREFERENCES</string>
    <string name="fly_record_share">Fly, Record, Share</string>
    <string name="TAKE_OFF">TAKE OFF</string>
    <string name="the_new_generation_of_ar_drone_has_arrived">The new generation of AR.Drone has arrived</string>
    <string name="ar_drone_update">AR.DRONE UPDATE</string>
    <string name="AR_DRONE_UPDATE">AR.DRONE UPDATE</string>
    <string name="loading">Loading…</string>
    <string name="Your_video_is_being_processed_Please_do_not_close_application">Your video is being processed\nPlease do not close the application\nIt will appear shortly in the video section</string>
    <string name="ACTIVATE_ABSOLUTE_CONTROL_MODE_FOR_EASY_CONTROL">ACTIVATE ABSOLUTE CONTROL MODE FOR EASY CONTROL!</string>
    <string name="USB">USB</string>
    <string name="ACTIVATE_THE_USB_RECORDING_OPTION_TO_RECORD_DIRECTLY_ON_A_USB_KEY">ACTIVATE THE USB RECORDING OPTION TO RECORD DIRECTLY ON A USB KEY</string>
    <string name="TO_LAND_PRESS_THE_LANDING_BUTTON_ONCE">TO LAND, PRESS THE LANDING BUTTON ONCE</string>
    <string name="TO_TAKE_OFF_PRESS_THE_TAKE_OFF_BUTTON_ONCE">TO TAKE OFF, PRESS THE TAKE OFF BUTTON ONCE</string>
    <string name="CHANGE_THE_ALTITUDE_LIMIT_IN_THE_FLIGHT_SETTNGS">CHANGE THE ALTITUDE LIMIT IN THE FLIGHT SETTNGS</string>
    <string name="RELEASE_THE_CONTROLS_TO_CHANGE_TO_HOVERING_MODE">RELEASE THE CONTROLS TO CHANGE TO HOVERING MODE</string>
    <string name="ARDRONE_2_0">AR.DRONE 2.0</string>
    <string name="INFORMATIONS">INFORMATIONS</string>
    <string name="USERS_VIDEOS">USERS VIDEOS</string>
    <string name="STAY_TUNED">STAY TUNED</string>
    <string name="WHERE_TO_BUY">WHERE TO BUY</string>
    <string name="HD_camera">HD camera</string>
    <string name="hd_camera_description">- 720p\n- 30 fps\n- H264 coding\n- Recording on your\niPhone/iPad by streaming\nWi-Fi or on USB key</string>
    <string name="absolute_control_description">A new mode for beginners: \nUsing an absolute reference, the drone pilots\nitself without worrying about its orientation</string>
    <string name="Absolute_Control">Absolute Control</string>
    <string name="guest_super_stable_description">- New 13-axis inertia centre merged by Kalman filter\nfor the best-ever control on a micro drone!\n- 3-axis gyroscope, 3-axis accelerometer, 3-axis magnetometer\n- Ultrasound, pressure sensor\n- Vertical camera to measure ground speed on 2 axes</string>
    <string name="The_ARDrone_is_super_stable">The AR.Drone is super stable</string>
    <string name="with_the_pilot_community">with the pilot community</string>
    <string name="guest_share_description">With the AR.Drone Academy, meet\nother pilots! Share your videos on\nYouTube and your photos on Picasa</string>
    <string name="Share">Share</string>
    <string name="Video_Games">Video Games</string>
    <string name="Augmented_Reality">Augmented Reality</string>
    <string name="guest_video_games_description">Take part into wild races, fight with\nyour friends or against AI thanks to\nthe AR.drone detection capacities.</string>
    <string name="Ardrone_com">Ardrone.com</string>
    <string name="Newsletter">Newsletter</string>
    <string name="Go_to_web_site">Go to web site</string>
    <string name="Sign_up">Sign up</string>
    <string name="Facebook">Facebook</string>
    <string name="Like">Like</string>
    <string name="Twitter">Twitter</string>
    <string name="Follow_up">Follow up</string>
    <string name="Join_Our_Community">Join Our Community</string>
    <string name="Stay_Tuned">Stay Tuned</string>
    <string name="ar_settings">SETTINGS</string>
    <string name="PERSONAL_SETTINGS">PERSONAL SETTINGS</string>
    <string name="default_settings">DEFAULT SETTINGS</string>
    <string name="flat_trim">FLAT TRIM</string>
    <string name="pairing">PAIRING</string>
    <string name="interface_opacity">INTERFACE OPACITY</string>
    <string name="usb_record">USB RECORD</string>
    <string name="altitude_limit">ALTITUDE LIMIT</string>
    <string name="vertical_speed_max">VERTICAL SPEED MAX</string>
    <string name="yaw_speed_max">ROTATION SPEED MAX</string>
    <string name="tilt_angle_max">TILT ANGLE MAX</string>
    <string name="outdoor_hull">OUTDOOR HULL</string>
    <string name="outdoor_flight">OUTDOOR FLIGHT</string>
    <string name="JOYPAD_MODE">JOYPAD MODE</string>
    <string name="absolute_control">ABSOLUTE CONTROL</string>
    <string name="calibration">CALIBRATION*</string>
    <string name="keep_your_distance_with_your_ardrone">*Keep your distance from your AR.Drone. It will now spin once to calibrate its compass.</string>
    <string name="left_handed">LEFT-HANDED</string>
    <string name="tilt_max">TILT MAX</string>
    <string name="ar_drone">AR.Drone</string>
    <string name="version">Version</string>
    <string name="software">Software</string>
    <string name="hardware">Hardware</string>
    <string name="type">Type</string>
    <string name="inertial">INERTIAL</string>
    <string name="motor_4">MOTOR 4</string>
    <string name="motor_1">MOTOR 1</string>
    <string name="motor_3">MOTOR 3</string>
    <string name="motor_2">MOTOR 2</string>
    <string name="motors_versions">MOTORS VERSIONS</string>
    <string name="adaptive_video">ADAPTIVE VIDEO</string>
    <string name="video_codec">VIDEO CODEC</string>
    <string name="p264">P264</string>
    <string name="vlib">VLIB</string>
    <string name="mm_per_sec">mm/s</string>
    <string name="degree_sign">°</string>
    <string name="deg_per_sec">°/s</string>
    <string name="meters">m</string>
    <string name="none">none</string>
    <string name="network_name">AR.DRONE NETWORK</string>
    <string name="looping_enabled">FLIP ENABLED</string>
    <string name="freeflight">AR.FREEFLIGHT</string>
    <string name="FLIGHT_SETTINGS">FLIGHT SETTINGS</string>
    <string name="PILOTING_MODE">PILOTING MODE</string>
    <string name="STATUS">STATUS</string>
    <string name="VIDEO_SETTINGS">VIDEO SETTINGS</string>
    <string name="LOADING">LOADING…</string>
    <string name="browser_error">Error: Could not connect to the server</string>
    <string name="browser_done">Done</string>
    <string name="ARDRONE_ACADEMY">AR.DRONE\nACADEMY</string>
    <string name="PHOTOS_VIDEOS">PHOTOS\nVIDEOS</string>
    <string name="PHOTOS">PHOTOS</string>
    <string name="VIDEOS">VIDEOS</string>
    <string name="ARDRONE_UPDATE">AR.DRONE\nUPDATE</string>
    <string name="PILOTING">PILOTING</string>
    <string name="GAMES">GAMES</string>
    <string name="DEMO">DEMO</string>
    <string name="wifi_not_available_please_connect_device_to_drone">Wi-Fi NOT AVAILABLE, PLEASE CONNECT YOUR DEVICE TO YOUR AR.DRONE</string>
    <string name="there_is_no_flight_photos_or_videos_saved_in_your_phone">NO FLIGHT PHOTOS OR VIDEOS SAVED ON YOUR DEVICE</string>
    <string name="label_oculus_mode">Oculus Mode</string>
    <string name="key_abs_control">toggleAbsoluteControl</string>
    <string name="key_device_tilt">seekDeviceTiltMax</string>
    <string name="key_ar_hardware_version">ar_drone_hardware_version</string>
    <string name="key_ar_software_version">ar_drone_software_version</string>
    <string name="key_network_name">networkName</string>
    <string name="key_network_pairing">togglePairing</string>
    <string name="key_usb_record">toggleUsbRecord</string>
    <string name="key_flip_enabled">toggleLoopingEnabled</string>
    <string name="key_alt_limit">seekAltitudeLimit</string>
    <string name="key_vert_speed">seekVerticalSpeedMax</string>
    <string name="key_yaw_speed">seekYawSpeedMax</string>
    <string name="key_drone_tilt">seekTiltMax</string>
    <string name="key_outdoor_hull">toggleOutdoorHull</string>
    <string name="key_outdoor_flight">toggleOutdoorFlight</string>
    <string name="key_flat_trim">flatTrim</string>
</resources>