<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="visible" >

    <include
        android:id="@+id/header_preferences"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/incl_status_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/imgLogo"
            style="@style/dashboardLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dashboard_logo_margin_top"
            android:paddingBottom="@dimen/dashboard_logo_padding_bottom"
            android:src="@drawable/ff2_logo_freeflight" />

        <TextView
            android:id="@+id/txtVersion"
            style="@style/dashboardLabelVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imgLogo"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dashboard_label_version_margin_bottom"
            android:layout_marginLeft="@dimen/dashboard_label_version_margin_left"
            android:layout_toRightOf="@+id/imgLogo"
            android:text="@string/app_version" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dashboard_button_margin_hor"
        android:layout_marginRight="@dimen/dashboard_button_margin_hor"
        android:layout_marginBottom="@dimen/dashboard_button_margin_hor"
        android:gravity="center_vertical" >

        <CheckedTextView
            android:id="@+id/btnFreeFlight"
            style="@style/dashboardButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_button_height"
            android:layout_marginBottom="@dimen/dashboard_button_margin_vert"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:lines="2"
            android:maxLines="3"
            android:text="@string/PILOTING" />

        <CheckedTextView
            android:id="@+id/btnPhotosVideos"
            style="@style/dashboardButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/dashboard_button_height"
            android:layout_marginBottom="@dimen/dashboard_button_margin_vert"
            android:layout_marginLeft="@dimen/dashboard_button_margin_hor"
            android:focusable="true"
            android:layout_weight="1"
            android:text="@string/PHOTOS_VIDEOS" />

        <CheckedTextView
                android:id="@+id/btnFirmwareUpdate"
                style="@style/dashboardButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/dashboard_button_height"
                android:layout_marginBottom="@dimen/dashboard_button_margin_vert"
                android:layout_marginLeft="@dimen/dashboard_button_margin_hor"
                android:focusable="true"
                android:layout_weight="1"
                android:text="@string/ARDRONE_UPDATE" />

    </LinearLayout>

</LinearLayout>